--- a/_posts/2021-11-14-MIT6.824-Spring2021-Lab2-Part2A.markdown
+++ b/_posts/2021-11-14-MIT6.824-Spring2021-Lab2-Part2A.markdown
@@ -2,9 +2,8 @@
 layout: post
 title:  "MIT6.824 Spring2021 Lab2 Part 2A 代码实现讲解"
 date:   2021-08-16 12:47:55 +0800
-categories: jekyll update
 excerpt: I am happy to join with you today in what will go down in history as the greatest demonstration for freedom in the history of our nation.
-
+category: distributed system
 ---
 
 # Part 2A leader election
